--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NosferatuGames - Loja de Videogames</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #0f0f0f;
       color: #90ee90;
-      font-family: monospace;
+      font-family: 'UnifrakturCook', cursive;
+      background-image: url('https://i.imgur.com/fZ3mJKz.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
     }
     .retro-frame {
       border: 4px solid #3aff3a;
       padding: 10px;
       box-shadow: 0 0 15px #3aff3a;
+      background-color: rgba(0, 0, 0, 0.8);
     }
   </style>
 </head>
