--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -36,14 +35,19 @@
       75% { opacity: 1; }
       100% { transform: translateX(110vw) translateY(0px) rotate(-10deg); opacity: 0; }
     }
+    summary {
+      cursor: pointer;
+    }
   </style>
 </head>
 <body class="p-4">
+  <!-- Música de fundo -->
   <audio autoplay loop>
     <source src="https://files.catbox.moe/kdxtn7.mp3" type="audio/mpeg">
     Seu navegador não suporta áudio HTML5.
   </audio>
 
+  <!-- Morcegos animados -->
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Bat_icon_black.svg/64px-Bat_icon_black.svg.png" class="bat" style="top:10%; left:0%; animation-delay: 0s;">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Bat_icon_black.svg/64px-Bat_icon_black.svg.png" class="bat" style="top:30%; left:-50px; animation-delay: 2s;">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Bat_icon_black.svg/64px-Bat_icon_black.svg.png" class="bat" style="top:50%; left:-100px; animation-delay: 4s;">
@@ -54,20 +58,51 @@
   </header>
 
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
-    <aside class="col-span-1 bg-black/60 p-4 rounded-lg border border-green-500">
+    <!-- Painel lateral com dropdown -->
+    <aside class="col-span-1 bg-black/60 p-4 rounded-lg border border-green-500 overflow-y-auto max-h-screen">
       <h2 class="text-2xl mb-2">Categorias</h2>
-      <ul class="space-y-2">
-        <li><a href="switch.html" class="text-green-400 hover:underline">Nintendo Switch</a></li>
-        <li><a href="#" class="text-green-400 hover:underline">Jogos</a></li>
-        <li><a href="#" class="text-green-400 hover:underline">Controles</a></li>
-        <li><a href="#" class="text-green-400 hover:underline">Acessórios</a></li>
-        <li><a href="#" class="text-green-400 hover:underline">Retro</a></li>
+      <ul class="space-y-2 text-green-300">
+        <li>
+          <details>
+            <summary>Nintendo</summary>
+            <ul class="ml-4">
+              <li><a href="#">Nintendo Switch</a></li>
+              <li><a href="#">Nintendo 3DS</a></li>
+              <li><a href="#">Nintendo Wii</a></li>
+              <li><a href="#">Nintendo Wii U</a></li>
+              <li><a href="#">GameCube</a></li>
+              <li><a href="#">Game Boy</a></li>
+              <li><a href="#">Game Boy Advance</a></li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details>
+            <summary>PlayStation</summary>
+            <ul class="ml-4">
+              <li><a href="#">PlayStation 2</a></li>
+              <li><a href="#">PlayStation 3</a></li>
+              <li><a href="#">PlayStation 4</a></li>
+            </ul>
+          </details>
+        </li>
+        <li>
+          <details>
+            <summary>Xbox</summary>
+            <ul class="ml-4">
+              <li><a href="#">Xbox 360</a></li>
+              <li><a href="#">Xbox One</a></li>
+            </ul>
+          </details>
+        </li>
       </ul>
     </aside>
 
+    <!-- Produtos (carregados via JS) -->
     <section id="produtos" class="col-span-1 md:col-span-3 grid md:grid-cols-2 lg:grid-cols-3 gap-4"></section>
   </div>
 
+  <!-- Quem somos nós -->
   <section class="mt-10 text-center">
     <h2 class="text-3xl mb-4">Quem Somos Nós</h2>
     <p class="max-w-2xl mx-auto text-green-200">
@@ -75,10 +110,11 @@
     </p>
   </section>
 
+  <!-- Redes Sociais -->
   <footer class="mt-10 text-center space-x-4">
-    <a href="#"><img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Instagram"></a>
-    <a href="#"><img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook"></a>
-    <a href="#"><img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp"></a>
+    <a href="#" class="inline-block"><img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Instagram"></a>
+    <a href="#" class="inline-block"><img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook"></a>
+    <a href="#" class="inline-block"><img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp"></a>
     <p class="text-green-500 mt-4">© 2025 NosferatuGames. Todos os direitos reservados.</p>
   </footer>
 
@@ -104,7 +140,8 @@
           `;
           container.innerHTML += card;
         });
-      });
+      })
+      .catch(err => console.error('Erro ao carregar produtos:', err));
   </script>
 </body>
 </html>
